// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-5 WithStyles(ForwardRef(Container))-root-4 MuiContainer-maxWidthLg-11"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31"
    >
      <div
        class="MuiGrid-root-13 WithStyles(ForwardRef(Grid))-root-116 WithStyles(ForwardRef(Grid))-root-117 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-10-57 MuiGrid-grid-md-6-81"
        >
          <div
            class="makeStyles-headerContainer-118"
          >
            <h6
              class="MuiTypography-root-119 MuiTypography-h6-129 MuiTypography-colorTextPrimary-144"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-root-157 MuiGrid-container-14 MuiGrid-item-15"
    >
      <div
        class="MuiGrid-root-13 makeStyles-titlesContainer-158 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 makeStyles-title-150 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
          >
            <p
              class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Vaults
            </p>
            <img
              alt="List description"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
            />
          </div>
          <div
            class="MuiGrid-root-13 makeStyles-title-150 makeStyles-columnTitle-155 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
          >
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              APY
            </p>
            <img
              alt="What is APR?"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="An annual percentage yield (APY), is the yearly rate earned by depositing in each vault."
            />
            <button
              aria-label="sort descending by APR"
              class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-sortIcon-151 makeStyles-nonSetSort-153"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-181"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-185 MuiSvgIcon-colorPrimary-186"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-362"
              />
            </button>
          </div>
          <div
            class="MuiGrid-root-13 makeStyles-title-150 makeStyles-columnTitle-155 makeStyles-tvlColumn-156 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
          >
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              TVL
            </p>
            <img
              alt="What is TVL?"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
            />
            <button
              aria-label="sort descending by TVL"
              class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-sortIcon-151 makeStyles-nonSetSort-153"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-181"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-185 MuiSvgIcon-colorPrimary-186"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-362"
              />
            </button>
          </div>
          <div
            class="MuiGrid-root-13 makeStyles-title-150 makeStyles-columnTitle-155 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
          >
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              MY DEPOSITS
            </p>
            <img
              alt="What represent My Deposits?"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="Represents the dollar value of all assets you deposited in each vault"
            />
            <button
              aria-label="sort descending by balance"
              class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-sortIcon-151 makeStyles-nonSetSort-153"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-181"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-185 MuiSvgIcon-colorPrimary-186"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-362"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-filterButton-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-181"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-362"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-root-238 makeStyles-enabledVault-239 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-clickableSection-241 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 makeStyles-iconBadgeContainer-256 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-justify-content-xs-center-31 MuiGrid-grid-xs-auto-46"
        >
          <div
            class="MuiGrid-root-13 makeStyles-iconContainer-260 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <div
              class="makeStyles-root-292"
            >
              <img
                alt="curve-renBTC-wBTC-sBTC logo"
                class="makeStyles-position-293"
                src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <span
              class="MuiTypography-root-119 makeStyles-behavior-244 MuiTypography-caption-122"
            >
              Ecosystem Helper
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <h6
                class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
              >
                Convex
                 - 
                Curve.fi renBTC/wBTC/sBTC
              </h6>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <p
                class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
              >
                0.25%
              </p>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-tvl-245 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-298 MuiBox-root-299"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-243 MuiTypography-body1-121"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-298 MuiBox-root-303"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-243 MuiTypography-body1-121"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <p
                class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-8-97"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-nonClickableSection-242 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-root-238 makeStyles-enabledVault-239 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-clickableSection-241 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 makeStyles-iconBadgeContainer-256 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-justify-content-xs-center-31 MuiGrid-grid-xs-auto-46"
        >
          <div
            class="MuiGrid-root-13 makeStyles-iconContainer-260 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <div
              class="makeStyles-root-292"
            >
              <img
                alt="BADGER logo"
                class="makeStyles-position-348"
                src="/assets/icons/badger.svg"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <span
              class="MuiTypography-root-119 makeStyles-behavior-244 MuiTypography-caption-122"
            >
              DCA
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <h6
                class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
              >
                Badger
                 - 
                Badger
              </h6>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <p
                class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
              >
                8.17%
              </p>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-tvl-245 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-298 MuiBox-root-351"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-243 MuiTypography-body1-121"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-298 MuiBox-root-354"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-243 MuiTypography-body1-121"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <p
                class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-8-97"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-nonClickableSection-242 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-root-238 makeStyles-enabledVault-239 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-clickableSection-241 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 makeStyles-iconBadgeContainer-256 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-justify-content-xs-center-31 MuiGrid-grid-xs-auto-46"
        >
          <div
            class="MuiGrid-root-13 makeStyles-iconContainer-260 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <div
              class="makeStyles-root-292"
            >
              <img
                alt="DIGG logo"
                class="makeStyles-position-355"
                src="/assets/icons/digg.svg"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          />
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <h6
                class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
              >
                Badger
                 - 
                Digg
              </h6>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <p
                class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
              >
                8.17%
              </p>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-tvl-245 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-298 MuiBox-root-358"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-243 MuiTypography-body1-121"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-298 MuiBox-root-361"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-243 MuiTypography-body1-121"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <p
                class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-8-97"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-nonClickableSection-242 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders mobile version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-5 WithStyles(ForwardRef(Container))-root-4 MuiContainer-maxWidthLg-11"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31"
    >
      <div
        class="MuiGrid-root-13 WithStyles(ForwardRef(Grid))-root-116 WithStyles(ForwardRef(Grid))-root-117 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-10-57 MuiGrid-grid-md-6-81"
        >
          <div
            class="makeStyles-headerContainer-118"
          >
            <h6
              class="MuiTypography-root-119 MuiTypography-h6-129 MuiTypography-colorTextPrimary-144"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 MuiGrid-container-14"
    >
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-10-57"
      >
        <p
          class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 makeStyles-badgerOverviewValueTitle-1 MuiTypography-body2-120"
        >
          My Assets:
        </p>
        <div
          class="MuiBox-root-298 MuiBox-root-364"
        >
          <p
            class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 MuiTypography-body2-120"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-filterWidgetContainer-3 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-2-49"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-filterButton-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-181"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-393"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-mobileContainer-159 MuiGrid-container-14 MuiGrid-justify-content-xs-space-between-33"
    >
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145 MuiTypography-displayInline-147"
        >
          Vaults
        </p>
        <img
          alt="List description"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
        />
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
        >
          APR
        </p>
        <img
          alt="What is APR?"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
        />
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-mobileContainer-253 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-251 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-292"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-365"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-244 MuiTypography-caption-122"
                  >
                    Ecosystem Helper
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-259 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
                  >
                    Convex
                     - 
                    Curve.fi renBTC/wBTC/sBTC
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    0.25%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-375"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-378"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-250 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-mobileContainer-253 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-251 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-292"
                >
                  <img
                    alt="BADGER logo"
                    class="makeStyles-position-379"
                    src="/assets/icons/badger.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-244 MuiTypography-caption-122"
                  >
                    DCA
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-259 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Badger
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-382"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-385"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-250 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-mobileContainer-253 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-251 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-292"
                >
                  <img
                    alt="DIGG logo"
                    class="makeStyles-position-386"
                    src="/assets/icons/digg.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-259 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Digg
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-389"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-392"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-250 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders tablet version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-5 WithStyles(ForwardRef(Container))-root-4 MuiContainer-maxWidthLg-11"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31"
    >
      <div
        class="MuiGrid-root-13 WithStyles(ForwardRef(Grid))-root-116 WithStyles(ForwardRef(Grid))-root-117 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-10-57 MuiGrid-grid-md-6-81"
        >
          <div
            class="makeStyles-headerContainer-118"
          >
            <h6
              class="MuiTypography-root-119 MuiTypography-h6-129 MuiTypography-colorTextPrimary-144"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 MuiGrid-container-14"
    >
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-10-57"
      >
        <p
          class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 makeStyles-badgerOverviewValueTitle-1 MuiTypography-body2-120"
        >
          My Assets:
        </p>
        <div
          class="MuiBox-root-298 MuiBox-root-364"
        >
          <p
            class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 MuiTypography-body2-120"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-filterWidgetContainer-3 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-2-49"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-filterButton-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-181"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-393"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-mobileContainer-159 MuiGrid-container-14 MuiGrid-justify-content-xs-space-between-33"
    >
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145 MuiTypography-displayInline-147"
        >
          Vaults
        </p>
        <img
          alt="List description"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
        />
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
        >
          APR
        </p>
        <img
          alt="What is APR?"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
        />
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-mobileContainer-253 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-251 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-292"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-365"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-244 MuiTypography-caption-122"
                  >
                    Ecosystem Helper
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-259 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
                  >
                    Convex
                     - 
                    Curve.fi renBTC/wBTC/sBTC
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    0.25%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-375"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-378"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-250 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-mobileContainer-253 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-251 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-292"
                >
                  <img
                    alt="BADGER logo"
                    class="makeStyles-position-379"
                    src="/assets/icons/badger.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-244 MuiTypography-caption-122"
                  >
                    DCA
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-259 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Badger
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-382"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-385"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-250 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-264 MuiCard-root-263 MuiGrid-root-13 makeStyles-mobileContainer-253 MuiGrid-container-14 MuiPaper-elevation1-268 MuiPaper-rounded-265"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-251 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-292"
                >
                  <img
                    alt="DIGG logo"
                    class="makeStyles-position-386"
                    src="/assets/icons/digg.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-259 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-258 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Digg
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-294 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-257 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-389"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-298 MuiBox-root-392"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-252 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-366 makeStyles-divider-248"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-250 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-outlined-312 makeStyles-button-304 MuiButton-outlinedPrimary-313 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-307 MuiButton-contained-315 makeStyles-button-304 MuiButton-containedPrimary-316 MuiButton-disabled-320 WithStyles(ForwardRef(Button))-disabled-306 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-308"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
